# clia-local

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  eslint.config.js  index.html  node_modules  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
scripts/: dev-tauri.mjs  prepare-rtk.mjs  prepare-winbox.mjs  rtk-release.json  winbox-release.json
src/: App.tsx  AppErrorBoundary.tsx  ContextMenu.tsx  DeployPackagesPanel.tsx  FilePalette.tsx  MachinesPanel.tsx  QuickSwitch.tsx  Root.tsx  SearchPanel.tsx  SplashScreen.tsx  agentMarkdown.test.tsx  agentMarkdown.tsx  agents.ts  aiCommit.test.ts  aiCommit.ts  analyzeInterview.test.ts  analyzeInterview.ts  artifacts.ts  capabilities-status.test.ts  capabilities-status.ts  commitSearch.test.ts  commitSearch.ts  deploy.test.ts  deploy.ts  diff.test.ts  diff.ts  evidence.ts  fileSearch.test.ts  fileSearch.ts  flowInterview.test.ts  flowInterview.ts  flows.test.ts  flows.ts  format.ts  gitGraph.test.ts  gitGraph.ts  gitSnapshot.test.ts  gitSnapshot.ts  gravatar.test.ts  gravatar.ts  (+32 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/rtk/: README.md
src-tauri/binaries/winbox/: README.md
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  deploy.rs  deploy_detect.rs  deploy_env.rs  deploy_executor.rs  deploy_package.rs  deploy_plan.rs  deploy_repair.rs  git.rs  lib.rs  lsp.rs  machine.rs  main.rs  rtk.rs  shell.rs  solution.rs  store.rs  terminal.rs  winbox_provider.rs
src/lsp/: controller.ts
src/monaco/: setup.ts
src/source/: DiffCompare.tsx  EditorTabs.tsx  (+6 more)
